--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@
                 <div class="col-md-9">
                     <h2 class="mb-3">最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-24">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-24-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 2月24日20M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享" src="/uploads/20241222-1/a6739d732704eaa23f08687f69677fcf.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-24-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 2月24日20M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、新加坡、日本、加拿大、欧洲、韩国、香港等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-02-23">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-2-23-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
@@ -256,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-2-15-node-share.htm" title="VPN设备 | 2月15日18.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 2月15日18.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-61176.htm" title="附近美甲美睫培训学校哪家好一点（美甲美睫美容学校）">附近美甲美睫培训学校哪家好一点（美甲美睫美容学校）</a></li>
+                        <li class="py-2"><a href="/news/article-61775.htm" title="狗粮猫粮加工设备什么牌子好一点（宠物狗粮加工设备）">狗粮猫粮加工设备什么牌子好一点（宠物狗粮加工设备）</a></li>
                         <li class="py-2"><a href="/news/article-59464.htm" title="宠物猫要多少钱（宠物猫多少钱?）">宠物猫要多少钱（宠物猫多少钱?）</a></li>
+                        <li class="py-2"><a href="/news/article-57251.htm" title="vs code编写web项目">vs code编写web项目</a></li>
                         <li class="py-2"><a href="/news/article-57745.htm" title="青岛市动物疫病预防控制中心怎么样（青岛市动物疫病预防控制中心主任）">青岛市动物疫病预防控制中心怎么样（青岛市动物疫病预防控制中心主任）</a></li>
                         <li class="py-2"><a href="/news/article-58920.htm" title="动物医院贵吗多少钱一个月（动物医院挣钱吗）">动物医院贵吗多少钱一个月（动物医院挣钱吗）</a></li>
-                        <li class="py-2"><a href="/news/article-58312.htm" title="动物疫苗是什么单位负责的（动物疫苗是什么单位负责的呢）">动物疫苗是什么单位负责的（动物疫苗是什么单位负责的呢）</a></li>
-                        <li class="py-2"><a href="/news/article-58313.htm" title="长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方">长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-17-free-v2ray.htm" title="VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-58921.htm" title="一片片枫叶从树上落下来就像（一片片枫叶从树上落下来就像什么补充句子）">一片片枫叶从树上落下来就像（一片片枫叶从树上落下来就像什么补充句子）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-19-free-v2ray.htm" title="VPN设备 | 2月19日18.3M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 2月19日18.3M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-61775.htm" title="狗粮猫粮加工设备什么牌子好一点（宠物狗粮加工设备）">狗粮猫粮加工设备什么牌子好一点（宠物狗粮加工设备）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-22-free-subscribe-node.htm" title="VPN设备 | 2月22日18.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 2月22日18.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-62378.htm" title="延吉市宠物店电话（延吉市宠物店电话地址）">延吉市宠物店电话（延吉市宠物店电话地址）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-24-clash-v2ray-ss-ssr.htm" title="VPN设备 | 2月24日20M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 2月24日20M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-60610.htm" title="Java高并发优化：中间件redis">Java高并发优化：中间件redis</a></li>
                     </ul>
     </div>
 </div>
@@ -277,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                     </ul>
     </div>
